--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -1,3 +1,8 @@
+/* * {
+    overflow-x: hidden;
+} */
+
+
 .animation {    
     /* padding-top: 1em; */
 }
